# libgit2pp

./: .gitignore  CMakeLists.txt  configure.ac
src/: .gitignore  CMakeLists.txt  branch.cpp  common.hpp  config.cpp  config.hpp  database.cpp  database.hpp  diff.cpp  diff.hpp  index.cpp  ref.cpp  ref.hpp  remote.cpp  remote.hpp  repository.cpp  repository.hpp  signature.cpp
